--- a/muapp/templates/index.html
+++ b/muapp/templates/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-md-8 col-lg-6 col-xl-4">
-    
+            {% if errcode != 1 %}
             <div class="card wow flipInX" data-wow-delay="0.1s" style="color: #4B515D; border-radius: 35px;">
             <div class="card-body p-4">
                 <div class="d-flex">
@@ -73,7 +73,7 @@
 
             </div>
             </div>
-    
+            {% endif %}
         </div>
         </div>
     
