--- a/muapp/templates/base.html
+++ b/muapp/templates/base.html
@@ -67,9 +67,9 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle jamsil" data-bs-toggle="dropdown">Clothes</a>             
                         <div class="dropdown-menu m-0" style="top: 60px;">
-                            <a href="{% url 'view_closet' user.username %}" class="dropdown-item jamsil">My closet</a>
-                            <a href="{% url 'blog' user.username %}" class="dropdown-item jamsil">Codi book</a>
-                            <a href="{% url 'uploadCloset' user.username %}" class="dropdown-item jamsil">(Test)Upload</a>
+                            <a href="{% url 'view_closet' user.first_name %}" class="dropdown-item jamsil">My closet</a>
+                            <a href="{% url 'blog' user.first_name %}" class="dropdown-item jamsil">Codi book</a>
+                            <a href="{% url 'uploadCloset' user.first_name %}" class="dropdown-item jamsil">(Test)Upload</a>
                         </div>
                     </div>
                     <a href="{% url 'logout' %}" class="nav-item nav-link jamsil vis">로그아웃</a>    
@@ -210,11 +210,13 @@
                     <h4 class="text-light mb-4 jamsil">바로가기</h4>
                     <a class="btn btn-link jamsil" href="">가상 피팅</a>
                     {% if user.is_authenticated %}
-                    <a class="btn btn-link jamsil" href="{% url 'detail_closet' user.username %}">옷장 관리</a>
+                    <a class="btn btn-link jamsil" href="{% url 'detail_closet' user.first_name %}">옷장 관리</a>
+                    <a class="btn btn-link jamsil" href="{% url 'blog' user.first_name %}">코디 추천</a>
                     {% else %}
                     <a class="btn btn-link jamsil" href="{% url 'login' %}">옷장 관리</a>
+                    <a class="btn btn-link jamsil" href="{% url 'login' %}">코디 추천</a>
                     {% endif %}
-                    <a class="btn btn-link jamsil" href="">코디 추천</a>
+                    
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4 jamsil">알림받기</h4>
