--- a/muapp/templates/upload_closet.html
+++ b/muapp/templates/upload_closet.html
@@ -62,7 +62,7 @@
                                 {% csrf_token %}
                                 <div class="mb-3 row">
                                     <label for="type1" class="col-sm-2 col-form-label text-end fw-bold">분류 1</label>
-                                    <select name="type1" id="type1" size="1" class="form-select col" onchange="itemChange()">
+                                    <select name="type1" id="type1" size="1" class="form-select col">
                                         <option value="none" disabled selected>=== 분류 1 ===</option>
                                         <option>상의</option>
                                         <option>바지</option>
@@ -103,8 +103,8 @@
                                     <input type="text" name="tags" id="tags" class="form-control col" readonly/>
                                 </div>
                                 <div class="mb-3 row">
-                                    <label for="details" class="col-sm-2 col-form-label text-end fw-bold">상세정보</label>
-                                    <textarea name="details" id="details" class="form-control col" rows="5" placeholder="생략 가능"></textarea>
+                                    <label for="details" class="col-sm-2 col-form-label text-end fw-bold" >상세정보</label>
+                                    <textarea name="details" id="details" class="form-control col details" rows="5" placeholder="생략 가능"></textarea>
                                 </div>
                                 <!-- Uppy Dashboard -->
                                 <div class="mb-3 row">
