--- a/muapp/templates/signup.html
+++ b/muapp/templates/signup.html
@@ -43,7 +43,7 @@
                             <div class="mb-3 jamsil">
                                 <label for="sex">성별</label>
                                 <select class="form-select" name="sex" id="sex">
-                                    <option value="">성별을 선택해주세요.</option>
+                                    <option value="" disabled selected>성별을 선택해주세요.</option>
                                     <option value="남">남자</option>
                                     <option value="여">여자</option>
                                 </select>
