--- a/muapp/templates/view_closet.html
+++ b/muapp/templates/view_closet.html
@@ -420,7 +420,7 @@
                     </div>
                 </div>
                 <div class="btn-container" name="btn-container">
-                    <button class="btn-submit" type="button" onclick = "location.href = '{% url 'uploadCloset' user.username %}' " onkeyup="if(window.event.keyCode==13){}">
+                    <button class="btn-submit" type="button" onclick = "location.href = '{% url 'uploadCloset' user.first_name %}' " onkeyup="if(window.event.keyCode==13){}">
                         <p id="btnText">Upload</p>
                     </button>
                 </div>
