--- a/muapp/templates/base.html
+++ b/muapp/templates/base.html
@@ -101,83 +101,6 @@
             </div>
         </nav>
     </div>
-    {% comment %} 모달창 {% endcomment %}
-    {% comment %} <div class="modal fade login" id="loginModal">
-        <div class="modal-dialog login animated">
-            <div class="modal-content">
-               <div class="modal-header">
-                  <h4 class="modal-title">로그인</h4>
-                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true" onclick="modalClose()">&times;</button>
-              </div>
-              <div class="modal-body">
-                  <div class="box">
-                       <div class="content">
-                          <div class="social">
-                              <a class="circle github" href="#">
-                                  <i class="fa fa-github fa-fw"></i>
-                              </a>
-                              <a id="google_login" class="circle google" href="#">
-                                  <i class="fa fa-google-plus fa-fw"></i>
-                              </a>
-                              <a id="facebook_login" class="circle facebook" href="#">
-                                  <i class="fa fa-facebook fa-fw"></i>
-                              </a>
-                          </div>
-                          <div class="division">
-                              <div class="line l"></div>
-                                <span>or</span>
-                              <div class="line r"></div>
-                          </div>
-                          <div class="error"></div>
-                          <div class="form loginBox">
-                              <form method="" action="" accept-charset="UTF-8">
-                                <input id="email" class="form-control" type="text" placeholder="Email" name="email">
-                                <input id="password" class="form-control" type="password" placeholder="Password" name="password">
-                                <input class="btn btn-default btn-login" type="button" value="로그인" onclick="loginAjax()">
-                              </form>
-                          </div>
-                       </div>
-                  </div>
-                  <div class="box">
-                      <div class="content registerBox" style="display:none;">
-                       <div class="form">
-                          <form method="POST" html="{:multipart=>true}" data-remote="true" action="{% url 'signup' %}" accept-charset="UTF-8">
-                            {% csrf_token %}
-                            <input id="email" class="form-control" type="text" placeholder="Email" name="email" value="{{ form.username.value|default_if_none:'' }}">
-                            <input id="password" class="form-control" type="password" placeholder="Password" name="password" value="{{ form.password1.value|default_if_none:'' }}">
-                            <input id="password_confirmation" class="form-control" type="password" placeholder="Repeat Password" name="password_confirmation" value="{{ form.password2.value|default_if_none:'' }}">
-                            <input class="btn btn-default btn-register" type="button" value="회원가입" name="commit">
-                          </form>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-              <div class="modal-footer">
-                  <div class="forgot login-footer">
-                      <span>Looking to
-                           <a href="javascript: showRegisterForm();">create an account</a>
-                      ?</span>
-                  </div>
-                  <div class="forgot register-footer" style="display:none">
-                       <span>Already have an account?</span>
-                       <a href="javascript: showLoginForm();">Login</a>
-                  </div>
-              </div>
-            </div>
-        </div>
-    </div>
-    <script type="text/javascript">
-        $(document).ready(function(){
-            openLoginModal();
-        });
-
-        function modalClose() {
-            $('#loginModal').modal('hide'); 
-            $('#loginModal').hide();
-            $('.jquery-modal').click();
-        }
-    </script> {% endcomment %}
-    
     <!-- Navbar End -->
 
     <!-- Main Start -->
@@ -213,8 +136,8 @@
                     <a class="btn btn-link jamsil" href="{% url 'detail_closet' user.first_name %}">옷장 관리</a>
                     <a class="btn btn-link jamsil" href="{% url 'blog' user.first_name %}">코디 추천</a>
                     {% else %}
-                    <a class="btn btn-link jamsil" href="{% url 'login' %}">옷장 관리</a>
-                    <a class="btn btn-link jamsil" href="{% url 'login' %}">코디 추천</a>
+                    <a class="btn btn-link jamsil" href="{% url 'detail_closet' " " %}">옷장 관리</a>
+                    <a class="btn btn-link jamsil" href="{% url 'blog' " " %}">코디 추천</a>
                     {% endif %}
                     
                 </div>
