--- a/muapp/templates/login2.html
+++ b/muapp/templates/login2.html
@@ -29,6 +29,9 @@
                                 <input type="password" class="form-control" name="password" id="password"
                                 value="{{ form.password.value|default_if_none:'' }}">
                             </div>
+                            {% if request.GET.next %}
+                               <input type="hidden" name="next" value="{{ request.GET.next }}">
+                            {% endif %}
                             <button type="submit" class="btn btn-primary jamsil">로그인</button>
                         </form>
                     </div>
