--- a/muapp/templates/base.html
+++ b/muapp/templates/base.html
@@ -64,6 +64,7 @@
                        
                     {% endblock nav %}
                     {% if user.is_authenticated %}
+                    <a href="{% url 'virtual_fit' user.first_name %}" class="nav-item nav-link jamsil">가상 피팅</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle jamsil" data-bs-toggle="dropdown">Clothes</a>             
                         <div class="dropdown-menu m-0" style="top: 60px;">
@@ -131,8 +132,8 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4 jamsil">바로가기</h4>
-                    <a class="btn btn-link jamsil" href="">가상 피팅</a>
                     {% if user.is_authenticated %}
+                    <a class="btn btn-link jamsil" href="{% url 'virtual_fit' user.first_name %}">가상 피팅</a>
                     <a class="btn btn-link jamsil" href="{% url 'detail_closet' user.first_name %}">옷장 관리</a>
                     <a class="btn btn-link jamsil" href="{% url 'blog' user.first_name %}">코디 추천</a>
                     {% else %}
