--- a/muapp/templates/index.html
+++ b/muapp/templates/index.html
@@ -2,7 +2,6 @@
 {% load static %}
 {% block nav %}
     <a href="{% url 'index' %}" class="nav-item nav-link active jamsil">Home</a>
-    <a href="{% url 'index' %}" class="nav-item nav-link jamsil">가상 피팅</a>
     <a href="{% url 'about' %}" class="nav-item nav-link jamsil">소개</a>
 {% endblock %}
     
@@ -19,8 +18,8 @@
                             <div class="row justify-content-start">
                                 <div class="col-8-auto">
                                     <h1 class="display-1 mb-5 animated slideInDown jamsil fonts" style="color: white; text-shadow: 2px 2px 4px black;">집에서 사고 싶은 옷을 쉽게 피팅해봐요! </h1>
-                                    <a href="" class="btn btn-primary btn-lg rounded-pill py-sm-3 px-sm-5 jamsil" style="text-shadow: -1px 0px black, 0px 1px black, 1px 0px black, 0px -1px black;">피팅하기</a>
                                     {% if user.is_authenticated %}
+                                    <a href="{% url 'virtual_fit' user.first_name %}" class="btn btn-primary btn-lg rounded-pill py-sm-3 px-sm-5 jamsil" style="text-shadow: -1px 0px black, 0px 1px black, 1px 0px black, 0px -1px black;">피팅하기</a>
                                     <a href="{% url 'blog' user.first_name %}" class="btn btn-secondary btn-lg rounded-pill py-sm-3 px-sm-5 ms-3 jamsil" style="text-shadow: -1px 0px black, 0px 1px black, 1px 0px black, 0px -1px black;">코디북 모으기</a>
                                     {% else %}
                                     <a href="{% url 'blog' " " %}" class="btn btn-secondary btn-lg rounded-pill py-sm-3 px-sm-5 ms-3 jamsil" style="text-shadow: -1px 0px black, 0px 1px black, 1px 0px black, 0px -1px black;">코디북 모으기</a>
