--- a/muapp/templates/view_closet.html
+++ b/muapp/templates/view_closet.html
@@ -8,95 +8,6 @@
     <a href="#" class="nav-link dropdown-toggle active jamsil" data-bs-toggle="dropdown">Clothes</a>
 {% endblock closet %}
 
-{% block jsv %}
-<script>
-    ( /* att_zone : 이미지들이 들어갈 위치 id, btn : file tag id */
-      imageView = function imageView(att_zone, btn){
-    
-        var attZone = document.getElementById(att_zone);
-        var btnAtt = document.getElementById(btn)
-        var sel_files = [];
-        
-        // 이미지와 체크 박스를 감싸고 있는 div 속성
-        var div_style = 'display:block;position:relative;'
-                      + 'margin:5px;border:1px solid #fff;z-index:1';
-        // 미리보기 이미지 속성
-        var img_style = 'width:30%;height:auto;z-index:none;visibilty:visible;animation-delay:0.1s;animation-name:fadeInup;vertical-align: middle;'
-        // 이미지안에 표시되는 체크박스의 속성
-        var chk_style = 'width:30px;height:30px;position:absolute;font-size:24px;'
-                      + 'bottom:0px;z-index:999;background-color:white;color:#f00';
-           
-    
-        
-        /*첨부된 이미리들을 배열에 넣고 미리보기 */
-        imageLoader = function(file){
-          sel_files.push(file);
-          var reader = new FileReader();
-          reader.onload = function(ee){
-            let img = document.createElement('img')
-            img.setAttribute('style', img_style)
-            img.src = ee.target.result;
-            attZone.appendChild(makeDiv(img, file));
-          }
-          
-          reader.readAsDataURL(file);
-        }
-        
-        /*첨부된 파일이 있는 경우 checkbox와 함께 attZone에 추가할 div를 만들어 반환 */
-        makeDiv = function(img, file){
-          var div = document.createElement('div')
-          div.setAttribute('style', div_style)
-          
-          var btn = document.createElement('input')
-          btn.setAttribute('type', 'button')
-          btn.setAttribute('value', 'x')
-          btn.setAttribute('delFile', file.name);
-          btn.setAttribute('style', chk_style);
-          btn.onclick = function(ev){
-            var ele = ev.srcElement;
-            var delFile = ele.getAttribute('delFile');
-            for(var i=0 ;i<sel_files.length; i++){
-              if(delFile== sel_files[i].name){
-                sel_files.splice(i, 1);      
-              }
-            }
-            
-            dt = new DataTransfer();
-            for(f in sel_files) {
-              var file = sel_files[f];
-              dt.items.add(file);
-            }
-            btnAtt.files = dt.files;
-            var p = ele.parentNode;
-            attZone.removeChild(p)
-          }
-          div.appendChild(img)
-          div.appendChild(btn)
-          return div
-        }
-      }
-    )('att_zone', 'btnAtt')
-    
-</script>
-<script>
-    {% comment %} $(document).ready(function() {
-        $("#chk_submit").on('click', function(){
-            var chk_arr = [];
-
-            $("input[name=nb[]]:checked").each(function(){
-                chk_arr.push($(this).val());
-            
-            });
-
-            alert(chk_arr);
-        });
-
-    })(jQuery); {% endcomment %}
-</script>
-<script>
-     
-</script>
-{% endblock jsv %}
 {% block content %}
     <!-- Page Header Start -->
     <div class="container-xxl py-5">
@@ -400,4 +311,75 @@
         </div>
     </div>
     <!-- Product End -->
-{% endblock  %}
+{% endblock content %}
+
+{% block jsv %}
+<script>
+    ( /* att_zone : 이미지들이 들어갈 위치 id, btn : file tag id */
+      imageView = function imageView(att_zone, btn){
+    
+        var attZone = document.getElementById(att_zone);
+        var btnAtt = document.getElementById(btn)
+        var sel_files = [];
+        
+        // 이미지와 체크 박스를 감싸고 있는 div 속성
+        var div_style = 'display:block;position:relative;'
+                      + 'margin:5px;border:1px solid #fff;z-index:1';
+        // 미리보기 이미지 속성
+        var img_style = 'width:30%;height:auto;z-index:none;visibilty:visible;animation-delay:0.1s;animation-name:fadeInup;vertical-align: middle;'
+        // 이미지안에 표시되는 체크박스의 속성
+        var chk_style = 'width:30px;height:30px;position:absolute;font-size:24px;'
+                      + 'bottom:0px;z-index:999;background-color:white;color:#f00';
+           
+    
+        
+        /*첨부된 이미지들을 배열에 넣고 미리보기 */
+        imageLoader = function(file){
+          sel_files.push(file);
+          var reader = new FileReader();
+          reader.onload = function(ee){
+            let img = document.createElement('img')
+            img.setAttribute('style', img_style)
+            img.src = ee.target.result;
+            attZone.appendChild(makeDiv(img, file));
+          }
+          
+          reader.readAsDataURL(file);
+        }
+        
+        /*첨부된 파일이 있는 경우 checkbox와 함께 attZone에 추가할 div를 만들어 반환 */
+        makeDiv = function(img, file){
+          var div = document.createElement('div')
+          div.setAttribute('style', div_style)
+          
+          var btn = document.createElement('input')
+          btn.setAttribute('type', 'button')
+          btn.setAttribute('value', 'x')
+          btn.setAttribute('delFile', file.name);
+          btn.setAttribute('style', chk_style);
+          btn.onclick = function(ev){
+            var ele = ev.srcElement;
+            var delFile = ele.getAttribute('delFile');
+            for(var i=0 ;i<sel_files.length; i++){
+              if(delFile== sel_files[i].name){
+                sel_files.splice(i, 1);      
+              }
+            }
+            
+            dt = new DataTransfer();
+            for(f in sel_files) {
+              var file = sel_files[f];
+              dt.items.add(file);
+            }
+            btnAtt.files = dt.files;
+            var p = ele.parentNode;
+            attZone.removeChild(p)
+          }
+          div.appendChild(img)
+          div.appendChild(btn)
+          return div
+        }
+      }
+    )('att_zone', 'btnAtt')
+</script>
+{% endblock jsv %}
